nit fix